--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,15 @@ sudo: false
 language: node_js
 node_js:
   - "6"
+git:
+  depth: 1
+branches:
+  only:
+  - subl2
 cache:
   timeout: 1800
   directories:
-  - node_modules
+    - node_modules
 env:
   - CXX=g++-4.8
 addons:
